--- a/src/app/view/random-word-view/random-word-view.component.html
+++ b/src/app/view/random-word-view/random-word-view.component.html
@@ -1,1 +1,8 @@
 <p>{{randomWord}}</p>
+<p>rwv</p>
+
+<div id="input-container">
+    <input *ngFor="let char of randomWord; let i = index" class="char-input" type="text" maxlength="1"
+        [style.grid-column]="'${i + 1}'" />
+    <!-- to do: fix grid -->
+</div>
