--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
+<div *ngIf="showLoadScreen" id="loading-screen">
+    <!-- You can add a loading animation or message here -->
+    <div id="loading-screen-logo">
+        <div>L</div>
+        <div>O</div>
+        <div>A</div>
+        <div>D</div>
+        <div>I</div>
+        <div>N</div>
+        <div>G</div>
+    </div>
+</div>
 <app-random-word-view></app-random-word-view>
