--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
         <div>G</div>
     </div>
 </div>
-<app-random-word-view></app-random-word-view>
+
+<app-hamburger-button />
+<router-outlet />
