--- a/src/app/components/hamburger-button/hamburger-button.component.css
+++ b/src/app/components/hamburger-button/hamburger-button.component.css
@@ -7,6 +7,8 @@
   background: transparent;
   cursor: pointer;
   transition: 0.3s ease;
+
+  position: absolute;
 }
 
 /* .hamburger-button:focus {
@@ -18,6 +20,7 @@
   font-size: 2rem;
   font-weight: 700;
   line-height: 1;
+  /* color: var(--white); */
 }
 
 .hamburger-button-bars {
@@ -37,7 +40,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: inherit;
   transition: 0.3s;
 }
 
