--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -1,15 +1,13 @@
 <div id="game">
-    <p>{{computerWord}}</p>
+	<p>{{computerWord}}</p>
 
-    <div id="word-grid">
-        <input *ngFor="let char of computerWordCharArray; let i = index; attemptCounter" class="char-input"
-            id="char-input-{{i}}" type="text" maxlength="1" [style.grid-column]="'${i++}'" [(ngModel)]="inputValues[i]"
-            (keyup)="jumpToNextOrPrevious($event, i)" />
+	<div id="word-grid">
+		<input *ngFor="let char of computerWordCharArray; let i = index; attemptCounter" class="char-input" id="char-input-{{i}}" type="text" maxlength="1" [style.grid-column]="'${i++}'" [(ngModel)]="inputValues[i]" (keyup)="jumpToNextOrPrevious($event, i)" />
 
+		<button id="word-button" (click)="handleCheck()" [style.grid-column]="computerWordCharArray.length + 1">CHECK</button>
+	</div>
 
-        <button id="word-button" (click)="handleCheck()"
-            [style.grid-column]="computerWordCharArray.length + 1">CHECK</button>
-    </div>
-
-    <div id="external-html">{{wordDetails}}</div>
+	<div id="external-html" *ngIf="showWordDetails">
+		<div *ngIf="!wordDetails">If you can read this check the CORS filter</div>
+	</div>
 </div>
